--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -1,7 +1,7 @@
 .menu-bar
+  font-family: 'Arial', 'Helvetica', 'sans-serif'
   width 100%
   background-color #105262
-  background-image url("../img/bb-chrome/menu-bar-bg.png")
   padding  8px 0px 8px
   color white
   height menu-bar-height
@@ -24,5 +24,3 @@
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-
-
