--- a/src/style/app.styl
+++ b/src/style/app.styl
@@ -1,7 +1,20 @@
+@require 'mixins/ordered-mixins.styl'
 @require 'components/**/**'
 
 body
-  margin: 0
+  default-font()
+  padding 0px
+  margin 0px
+  background-color #eee
 
-iframe
-  border: 1px solid gray
+.app
+  absolute(0, 0, 0, 0)
+  text-align left
+
+.innerApp
+  absolute(50, 0, 0, 0)
+
+  iframe
+    border: 0
+    width: 100%
+    height: 100%
