Checkpoint: before implementing tabbed dialogs

--- a/src/style/mixins/metrics.styl
+++ b/src/style/mixins/metrics.styl
@@ -1,3 +1,1 @@
-global-nav-height = 30px
-actions-bar-height = 40px
-palette-and-actions-height = global-nav-height + actions-bar-height
+menu-bar-height = 30px
