Updatead file dialog styles

--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -41,3 +41,26 @@
     border-left 5px solid #72bca6
     padding 10px
     padding-bottom 50px
+
+    .dialogTab
+      input
+        width 100%
+        font-size 20px
+        padding 5px
+      .filelist
+        height 275px
+        overflow auto
+        margin 10px 0
+        cursor pointer
+        div
+          margin 3px 0
+          padding 3px
+          font-size 20px
+        div:hover
+          color: #fff
+          background-color: green-blue
+      .buttons
+        float: right
+        button
+          modal-button()
+          margin-left 10px
