Added confirm prompt for delete and highlight of selected file in dialog

--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -56,6 +56,9 @@
           margin 3px 0
           padding 3px
           font-size 20px
+        div.selected
+          color: #fff
+          background-color #72bfca
         div:hover
           color: #fff
           background-color: green-blue
