Added double click for file in dialog [#108892446]

--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -52,6 +52,10 @@
         overflow auto
         margin 10px 0
         cursor pointer
+        -webkit-user-select: none
+        -moz-user-select: none
+        -ms-user-select: none
+        user-select: none;
         div
           margin 3px 0
           padding 3px
