The file manager can show a help icon linking to a specified help link on the right side of the menu. [#108890984]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -24,3 +24,7 @@
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+
+  .menu-bar-right
+    padding-left 0.5em
+    padding-right 0.5em
