--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -19,11 +19,16 @@
   .menu-bar-file-status
     label-font()
     color #fff
-    background-color #f00
     padding 2px 7px
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+
+  .menu-bar-file-status-alert
+    background-color #f00
+
+  .menu-bar-file-status-info
+    background-color #00f
 
   .menu-bar-right
     padding-left 0.5em
