Changed saving/saved message to use provider display name

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -16,19 +16,16 @@
   .menu-bar-content-filename
     flex-content()
 
-  .menu-bar-file-status
+  .menu-bar-file-status-alert
     label-font()
-    color #fff
+    background-color #f00
     padding 2px 7px
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
 
-  .menu-bar-file-status-alert
-    background-color #f00
-
   .menu-bar-file-status-info
-    background-color #00f
+    font-style: italic
 
   .menu-bar-right
     padding-left 0.5em
