The file manager can show the login name on the right side of the menu. [#108891028]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -30,3 +30,15 @@
   .menu-bar-right
     padding-left 0.5em
     padding-right 0.5em
+
+    .menu-hidden, .menu-showing
+      right 10px
+
+  span.gdrive-icon
+    background url("../img/google-drive-16.png") no-repeat top left
+    display inline-block
+    width 16px
+    height 16px
+    padding 0
+    position relative
+    top 3px
