Added document store icon

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -42,3 +42,12 @@
     padding 0
     position relative
     top 3px
+
+  span.document-store-icon
+    background url("../img/document-store-16.png") no-repeat top left
+    display inline-block
+    width 16px
+    height 16px
+    padding 0
+    position relative
+    top 3px
