--- a/src/style/components/dropdown-menu.styl
+++ b/src/style/components/dropdown-menu.styl
@@ -28,7 +28,6 @@
     padding 4px
     list-style none
     box-shadow 0 0 5px rgba(0, 0, 0, 0.15)
-    border-radius 5px
     background #fff
 
   li
@@ -38,11 +37,15 @@
     margin 2px
     padding 4px
     cursor pointer
-    border-radius 5px
     transition all 0.2
     &.disabled
       color #aaa
       font-style italic
+    &.separator
+      border-top 1px solid #aaa
+      padding 0
+      height: 1px
+      margin 4px
   li:hover
     background hsla(0,0,80,1.0)
     color #fff
@@ -50,5 +53,5 @@
       color #aaa
       background none
       cursor not-allowed
-
-
+    &.separator
+      background none
