--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -60,6 +60,8 @@
           margin 3px 0
           padding 3px
           font-size 20px
+          i
+            margin-right 7px
         div.selected
           color: #fff
           background-color #72bfca
