Move menu to hamburger to the left of the document title [#109544210]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -14,15 +14,21 @@
     padding-right 0.5em
 
   .menu-bar-content-filename
-    flex-content()
+    label-font(size: 13px)
+    display inline-block
+    padding-left 10px
+    padding-top 1px
+    cursor pointer
+    no-select()
 
   .menu-bar-file-status-alert
     label-font()
     background-color #f00
     padding 2px 7px
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+    -webkit-border-radius: 5px
+    -moz-border-radius: 5px
+    border-radius: 5px
+    margin-left 10px
 
   .menu-bar-file-status-info
     font-style: italic
