--- a/src/style/components/dropdown-menu.styl
+++ b/src/style/components/dropdown-menu.styl
@@ -1,12 +1,11 @@
 .menu
-  display inline
+  float left
   padding-left 10px
   .menu-anchor
+    display inline-block
     cursor pointer
-    label-font(size: 13px)
-    font-size 13px
-    i
-      font-size 7px
+    svg
+      fill #fff
 
 .menu-hidden
   display none
@@ -24,7 +23,7 @@
   ul
     text-align left
     display block
-    margin 0.5em
+    margin-top 0.5em
     padding 4px
     list-style none
     box-shadow 0 0 5px rgba(0, 0, 0, 0.15)
