Make document name editable through double-click. [#109544318]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -21,6 +21,16 @@
     cursor pointer
     no-select()
 
+    input
+      border 0
+      padding 0
+      margin 0
+      background none
+      label-font(size: 13px)
+      color #fff
+      width 300px
+      outline none
+
   .menu-bar-file-status-alert
     label-font()
     background-color #f00
