Added chevrons to submenu parent items

--- a/src/style/components/dropdown-menu.styl
+++ b/src/style/components/dropdown-menu.styl
@@ -46,6 +46,9 @@
       padding 0
       height: 1px
       margin 4px
+    i
+      float right
+      margin-right -10px
   li:hover
     background hsla(0,0,80,1.0)
     color #fff
