--- a/src/style/components/modal.styl
+++ b/src/style/components/modal.styl
@@ -35,6 +35,10 @@ tab-border-radius = 5px
             float right
             cursor pointer
 
+        .modal-dialog-blocking-message
+          padding 20px
+          min-width 400px
+          text-align center
 
 .modal-dialog-alert
   blenderbox-modal-labels()
