Change style of title editing box to look more like a textfield. [#110255316]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -25,9 +25,9 @@
       border 0
       padding 0
       margin 0
-      background none
+      background #fff
       label-font(size: 13px)
-      color #fff
+      color #000
       width 300px
       outline none
 
