Place authorization button for google drive in the center and make it in the style of buttons we are using elsewhere. [#110258796]

--- a/src/style/components/file-dialog.styl
+++ b/src/style/components/file-dialog.styl
@@ -10,3 +10,16 @@
     text-align center
     button
       modal-button()
+
+.google-drive-auth
+  .google-drive-concord-logo
+    background url("../img/google-drive-logo.png") no-repeat top left
+    width 351px
+    height 113px
+    padding 0
+    margin 50px 35px 0 35px
+
+  .google-drive-footer
+    text-align center
+    button
+      modal-button()
