Added dropzone styling for local file opens [#109913320]

--- a/src/style/components/file-dialog.styl
+++ b/src/style/components/file-dialog.styl
@@ -23,3 +23,23 @@
     text-align center
     button
       modal-button()
+
+.localFileLoad
+  .dropArea
+    position relative
+    overflow hidden
+    border 1px dashed #00
+    padding 150px 0
+    text-align center
+    font-size 14px
+    input
+      position absolute
+      top 0
+      right 0
+      margin 0
+      padding 0
+      left 0
+      bottom 0
+      opacity 0
+  .dropHover
+    background-color #FFFBCC
