--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -36,6 +36,7 @@
           margin-right 0
 
   .workspace-tab-component
+    position relative
     margin 0px
     width 70%
     border-left 5px solid #72bca6
@@ -69,7 +70,9 @@
           color: #fff
           background-color: green-blue
       .buttons
-        float: right
+        position absolute
+        bottom 10
+        right 10
         button
           modal-button()
           margin-left 10px
