--- a/src/style/components/share-dialog.styl
+++ b/src/style/components/share-dialog.styl
@@ -1,16 +1,105 @@
 .share-dialog
-  padding 20px
-  width 400px
+  width 600px
 
-  input
-    margin 10px 0
-    width 100%
-    font-size 20px
-    padding 5px
+  .share-top-dialog
+    padding 30px
+
+  .share-status
+    margin 30px
+    font-size 32px
+    text-align center
+
+    a
+      font-size 14px
+      margin-left 10px
+
+  .share-button
+    button
+      modal-button()
+      float left
+    .share-button-help-not-sharing
+      margin-left 175px
+      padding-top 10px
+    .share-button-help-sharing
+      margin-left 210px
+      padding-top 10px
+
+  .sharing-tabs
+    clear both
+    margin-top 30px
+
+    .sharing-tab
+      border 1px solid #000
+      border-bottom none
+      float left
+      padding 5px
+      cursor pointer
+    .sharing-tab-embed
+      border-left none
+    .sharing-tab-selected
+      background-color #ddd
+
+  .sharing-tab-contents
+    clear both
+    padding 20px
+    height 100px
+    background-color #ddd
+
+    .copy-link
+      margin-left 10px
+
+    .social-icons
+      margin-top 10px
+
+      .social-icon
+        display: inline-block
+        margin-right 7px
+
+        width: 32px
+        height: 32px
+        border-radius: 50%;
+
+        position: relative;
+        overflow: hidden;
+        vertical-align: middle;
+
+        .social-container
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+        .social-svg
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          fill-rule: evenodd;
+
+        .social-svg-background,
+        .social-svg-icon,
+        .social-svg-mask
+          transition: fill 170ms ease-in-out;
+          fill: transparent;
+        .social-svg-mask
+          fill: #0f0b0b;
+
+    input
+      margin-top 5px
+      padding 5px
+      width 100%
+    textarea
+      margin-top 5px
+      width 100%
+      padding 5px
+      height 75px
+
 
   .buttons
+    clear both
     float right
-    margin 10px 0
+    margin 10px
 
     button
       modal-button()
