--- a/src/style/components/share-dialog.styl
+++ b/src/style/components/share-dialog.styl
@@ -26,24 +26,29 @@
 
   .sharing-tabs
     clear both
-    margin-top 30px
+    margin 30px 0 5px 0
 
-    .sharing-tab
+    li
+      list-style none
+      margin 0
+      display inline
       border 1px solid #000
       border-bottom none
-      float left
       padding 5px
       cursor pointer
     .sharing-tab-embed
       border-left none
     .sharing-tab-selected
       background-color #ddd
+      border-bottom 1px solid #ddd
 
   .sharing-tab-contents
     clear both
     padding 20px
     height 100px
     background-color #ddd
+    border-top 1px solid #000
+    border-bottom 1px solid #000
 
     .copy-link
       margin-left 10px
