--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -14,6 +14,7 @@
       list-style none
       padding-left 10px
       li
+        list-style none
         blenderbox-modal-labels()
         font-size 15px
         -webkit-border-radius tab-border-radius
@@ -61,6 +62,7 @@
           margin 3px 0
           padding 3px
           font-size 20px
+          color: #000
           i
             margin-right 7px
         div.selected
