Default text color to black in dialogs.

--- a/src/style/components/file-dialog.styl
+++ b/src/style/components/file-dialog.styl
@@ -8,6 +8,7 @@
 
   .document-store-footer
     text-align center
+    color #000
     button
       modal-button()
 
@@ -21,6 +22,7 @@
 
   .google-drive-footer
     text-align center
+    color #000
     button
       modal-button()
 
@@ -32,6 +34,7 @@
     padding 150px 0
     text-align center
     font-size 14px
+    color #000
     input
       position absolute
       top 0
