Support remotely hosted folders. Use ES6 promises to support error handling. Add support for 'labels' in file lists.

--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -68,7 +68,7 @@
         div.selected
           color: #fff
           background-color #72bfca
-        div:hover
+        div.selectable:hover
           color: #fff
           background-color: green-blue
       .buttons
