--- a/src/style/components/modal.styl
+++ b/src/style/components/modal.styl
@@ -17,6 +17,8 @@ tab-border-radius = 5px
 
     .modal-dialog
       absolute(0, 0, 0, 0)
+      width 100%
+      height 100%
       enable-flex(column, justify: center, alignItems: center)
 
       .modal-dialog-wrapper
