Changed browser alerts to centered alert dialogs [#114585515]

--- a/src/style/components/modal.styl
+++ b/src/style/components/modal.styl
@@ -13,6 +13,7 @@ tab-border-radius = 5px
     z-index 2
 
   .modal-content
+    z-index 3
     absolute(0, 0, 0, 0)
 
     .modal-dialog
@@ -24,7 +25,7 @@ tab-border-radius = 5px
       .modal-dialog-wrapper
         max-width dialog-width
         background-color #fff
-        z-index 3
+        border 1px solid #aaa
 
         .modal-dialog-title
           label-font()
