Added import dialog [#114585947]

--- a/src/style/components/file-dialog.styl
+++ b/src/style/components/file-dialog.styl
@@ -32,6 +32,7 @@
     overflow hidden
     border 1px dashed #00
     padding 150px 0
+    margin-bottom 10px
     text-align center
     font-size 14px
     color #000
@@ -46,3 +47,18 @@
       opacity 0
   .dropHover
     background-color #FFFBCC
+
+.urlImport
+  .urlDropArea
+    position relative
+    overflow hidden
+    border 1px dashed #00
+    padding 120px 0
+    margin-bottom 10px
+    text-align center
+    font-size 14px
+    color #000
+  .dropHover
+    background-color #FFFBCC
+  input
+    margin-bottom 20px
