Filenames should be in camel case, not upper case, on the top bar. [#115354327]

--- a/src/style/mixins/fonts.styl
+++ b/src/style/mixins/fonts.styl
@@ -8,10 +8,10 @@ default-font(style=normal, variant=normal, weight=normal, size=12px)
   font-family 'Montserrat', sans-serif
   text-transform none
 
-label-font(style=normal, variant=normal, weight=normal, size=12px)
+label-font(style=normal, variant=normal, weight=normal, size=12px, transform=uppercase)
   default-font(style:style, variant:variant, weight:weight, size:size)
   font-family 'Museo Sans', 'Montserrat', sans-serif
-  text-transform uppercase
+  text-transform transform
 
 italic-font(size=12px)
 	font-family 'Museo Sans', 'Montserrat', sans-serif
