--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -14,7 +14,7 @@
     padding-right 0.5em
 
   .menu-bar-content-filename
-    label-font(size: 13px)
+    label-font(size: 13px, transform: none)
     display inline-block
     padding-left 10px
     padding-top 1px
