Added centered confirm dialog to replace browser confirm [#114585515]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -26,7 +26,7 @@
       padding 0
       margin 0
       background #fff
-      label-font(size: 13px)
+      label-font(size: 13px, transform: none)
       color #000
       width 300px
       outline none
