--- a/src/style/components/alert-dialog.styl
+++ b/src/style/components/alert-dialog.styl
@@ -2,6 +2,11 @@
   padding 20px
   width 400px
 
+  .alert-dialog-message
+    margin 10px 0
+    text-align center
+    font-size 14px
+
   .buttons
     float right
     margin 10px 0
