The user should see the name of the parent folder in the Open File dialog, with its file indented slightly beneath it. [#115353505]

--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -71,6 +71,8 @@
         div.selectable:hover
           color: #fff
           background-color: green-blue
+        div.subfolder
+          margin-left 10px
       .buttons
         position absolute
         bottom 10
