Added hide blocking modal

--- a/src/style/components/modal.styl
+++ b/src/style/components/modal.styl
@@ -42,6 +42,10 @@ tab-border-radius = 5px
           padding 20px
           min-width 400px
           text-align center
+          color #000
+
+          button
+            modal-button()
 
 .modal-dialog-alert
   blenderbox-modal-labels()
