Provide a way for the author to get a link for embedding a CODAP document in LARA. [#115831067]

--- a/src/style/components/share-dialog.styl
+++ b/src/style/components/share-dialog.styl
@@ -101,6 +101,14 @@
       padding 5px
       height 75px
 
+    .lara-settings
+      margin-top 10px
+      .codap-server-url
+        width 68%
+        float left
+      .launch-button-text
+        width 30%
+        float right
 
   .buttons
     clear both
