Converted "Download" to "Save" to local file system [#133108353]
* Added file save to local file provider
* Fixed missing sharing code changes for v2 document store
* Added download/save when enter key is pressed in save and download dialogs
* Removed "Download" from default menu

--- a/src/style/components/file-dialog.styl
+++ b/src/style/components/file-dialog.styl
@@ -62,3 +62,18 @@
     background-color #FFFBCC
   input
     margin-bottom 20px
+
+.localFileSave
+  .saveArea
+    margin-top 10px
+    height 250px
+    color #000
+    .shareCheckbox
+      input[type=checkbox]
+        width initial !important
+        margin-right 5px
+  .note
+    color #000
+    margin 10px 0
+    font-style italic
+    font-size 0.9em
