--- a/src/style/components/tabbed-panel.styl
+++ b/src/style/components/tabbed-panel.styl
@@ -45,7 +45,7 @@
     padding-bottom 50px
 
     .dialogTab
-      input
+      input[type=text]
         width 100%
         font-size 20px
         padding 5px
@@ -82,3 +82,9 @@
           margin-left 10px
         button.disabled
           background-color: #777
+        a
+          modal-button()
+          margin-right 0px
+          text-decoration none
+        a.disabled
+          background-color #777
