--- a/src/style/components/dropdown-menu.styl
+++ b/src/style/components/dropdown-menu.styl
@@ -49,6 +49,7 @@
     i
       float right
       margin-right -10px
+      margin-top 2px
   li:hover
     background hsla(0,0,80,1.0)
     color #fff
