--- a/src/style/components/share-dialog.styl
+++ b/src/style/components/share-dialog.styl
@@ -46,7 +46,6 @@
   .sharing-tab-contents
     clear both
     padding 20px
-    height 100px
     background-color #ddd
     border-top 1px solid #000
     border-bottom 1px solid #000
@@ -105,10 +104,12 @@
       margin-top 10px
       .codap-server-url
         width 68%
-        float left
-      .launch-button-text
-        width 30%
-        float right
+      .launch-button-text input
+        width: 160px !important
+        margin-left: 10px;
+      input[type="checkbox"]
+        margin-right: 10px;
+        width: 10px !important
 
   .buttons
     clear both
