--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -12,6 +12,8 @@
   span, i
     padding-left 0.5em
     padding-right 0.5em
+    vertical-align middle
+    display inline-block
 
   .menu-bar-content-filename
     label-font(size: 13px, transform: none)
@@ -19,6 +21,7 @@
     padding-left 5px
     padding-top 1px
     cursor pointer
+    vertical-align middle
     no-select()
 
     input
@@ -46,6 +49,7 @@
   .menu-bar-right
     padding-left 0.5em
     padding-right 0.5em
+    margin-bottom: -0.35em;
 
     .menu-hidden, .menu-showing
       right 10px
@@ -67,3 +71,16 @@
     padding 0
     position relative
     top 3px
+
+  // Customize default drop-down styles. Language menu is a bit more compact.
+  .lang-menu
+    .menu-showing
+      min-width 50px
+
+    .lang-option
+      padding 0
+      text-transform uppercase
+      .flag
+        vertical-align middle
+        margin-right 10px
+
