Update style of the hamburger menu, make it more obvious
[#162021179]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -46,12 +46,14 @@
   .menu-bar-file-status-info
     font-style: italic
 
-  .menu-bar-right
-    padding-left 0.5em
-    padding-right 0.5em
+  .menu-bar-left, .menu-bar-right
     height 100%
     display flex
     align-items center
+
+  .menu-bar-right
+    padding-left 0.5em
+    padding-right 0.5em
 
     .menu-hidden, .menu-showing
       right 10px
