Handle translation menus without flags [#164714608]

--- a/src/style/components/dropdown-menu.styl
+++ b/src/style/components/dropdown-menu.styl
@@ -3,11 +3,14 @@
   vertical-align middle
   padding-left 10px
   .menu-anchor
+    &.menu-anchor-right
+      padding-right 5px
     display inline-block
     cursor pointer
     padding-right 10px
     svg
       fill #fff
+    svg.default-anchor
       border 1px solid #aaa
 
 .menu-hidden
