Fixed google icon margin/padding [#167622499]

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -58,6 +58,9 @@
     .menu-hidden, .menu-showing
       right 10px
 
+  span.gdrive-user
+    height 14px
+
   span.gdrive-icon
     background url("../img/google-drive-16.png") no-repeat top left
     display inline-block
@@ -65,7 +68,8 @@
     height 16px
     padding 0
     position relative
-    top 3px
+    top -1px
+    margin-right 3px
 
   span.document-store-icon
     background url("../img/document-store-16.png") no-repeat top left
