[#162106188] Use CFM Locale Selection menu.

--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -93,4 +93,9 @@
     .lang-label
       padding-right: 0.25em;
       margin-top: -11px
+      background-image: url('../img/earth.svg')
+      background-repeat: no-repeat;
+      padding-left: 21px;
+      background-position: 4px 0;
+      background-size: 13px;
 
