Experiment with asset paths.
Experiment with asset paths.  Not working still.

[#172253253]
https://www.pivotaltracker.com/n/projects/2441249/stories/172253253

172253253-switch-to-webpack

--- a/src/style/mixins/icons.styl
+++ b/src/style/mixins/icons.styl
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'CodapIvy';
-	src:url('../fonts/CodapIvy.eot?ndvjg4');
-	src:url('../fonts/CodapIvy.eot?ndvjg4#iefix') format('embedded-opentype'),
-		url('../fonts/CodapIvy.ttf?ndvjg4') format('truetype'),
-		url('../fonts/CodapIvy.woff?ndvjg4') format('woff'),
-		url('../fonts/CodapIvy.svg?ndvjg4#CodapIvy') format('svg');
+	src:url('~/fonts/CodapIvy.eot');
+	src:url('~/fonts/CodapIvy.eot') format('embedded-opentype'),
+		url('~/fonts/CodapIvy.ttf') format('truetype'),
+		url('~/fonts/CodapIvy.woff') format('woff'),
+		url('~/fonts/CodapIvy.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
