--- a/src/style/components/menu-bar.styl
+++ b/src/style/components/menu-bar.styl
@@ -62,7 +62,7 @@
     height 14px
 
   span.gdrive-icon
-    background url("../img/google-drive-16.png") no-repeat top left
+    background url("~/img/google-drive-16.png") no-repeat top left
     display inline-block
     width 16px
     height 16px
@@ -72,7 +72,7 @@
     margin-right 3px
 
   span.document-store-icon
-    background url("../img/document-store-16.png") no-repeat top left
+    background url("~/img/document-store-16.png") no-repeat top left
     display inline-block
     width 16px
     height 16px
@@ -97,7 +97,7 @@
     .lang-label
       padding-right: 0.25em;
       margin-top: -11px
-      background-image: url('../img/earth.svg')
+      background-image: url('~/img/earth.svg')
       background-repeat: no-repeat;
       padding-left: 21px;
       background-position: 4px 0;
