--- a/src/style/mixins/fonts.styl
+++ b/src/style/mixins/fonts.styl
@@ -19,24 +19,24 @@ italic-font(size=12px)
 
 @font-face
 	font-family Montserrat
-	src url(../fonts/Montserrat-Bold.otf)
+	src url("~/fonts/Montserrat-Bold.otf")
 	font-weight bold
 	font-style normal
 
 @font-face
 	font-family: Montserrat
-	src url(../fonts/Montserrat-Regular.otf)
+	src url("~/fonts/Montserrat-Regular.otf")
 	font-weight  normal
 	font-style normal
 
 @font-face
 	font-family Museo Sans
-	src url(../fonts/MuseoSans_500.otf)
+	src url("~/fonts/MuseoSans_500.otf")
 	font-weight normal
 	font-style normal
 
 @font-face
 	font-family Museo Sans
-	src url(../fonts/MuseoSans_500_italic.otf)
+	src url("~/fonts/MuseoSans_500_italic.otf")
 	font-weight normal
 	font-style italic
