Webpack working for default `dist` (external app.css, app.js, globals.js)
* Revert asset path changes in CSS URL loading (assets are just copied to the correct locations)
* This mirrors the existing default Gulp build (without config parameters)
* Add `.nvmrc` to pin node version.  TBD: Is this a good / bad pattern?

TODO:  Add build targets for single-app bundles, and CODAP variations.

[#172253253]
https://www.pivotaltracker.com/n/projects/2441249/stories/172253253

--- a/src/style/components/file-dialog.styl
+++ b/src/style/components/file-dialog.styl
@@ -1,6 +1,6 @@
 .document-store-auth
   .document-store-concord-logo
-    background url("~/img/concord-logo.png") no-repeat top left
+    background url("../img/concord-logo.png") no-repeat top left
     width 332px
     height 106px
     padding 0
@@ -14,7 +14,7 @@
 
 .google-drive-auth
   .google-drive-concord-logo
-    background url("~/img/google-drive-logo.png") no-repeat top left
+    background url("../img/google-drive-logo.png") no-repeat top left
     width 351px
     height 113px
     padding 0
