--- a/src/style/mixins/flags.styl
+++ b/src/style/mixins/flags.styl
@@ -6,7 +6,7 @@
     display: inline-block
     width: 24px
     height: 24px
-    background: url('~/img/flags.png') no-repeat
+    background: url('../img/flags.png') no-repeat
 
 .flag.flag-cz
     background-position: -72px -72px
