--- a/src/style/mixins/icons.styl
+++ b/src/style/mixins/icons.styl
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'CodapIvy';
-	src:url('~/fonts/CodapIvy.eot');
-	src:url('~/fonts/CodapIvy.eot') format('embedded-opentype'),
-		url('~/fonts/CodapIvy.ttf') format('truetype'),
-		url('~/fonts/CodapIvy.woff') format('woff'),
-		url('~/fonts/CodapIvy.svg') format('svg');
+	src:url('../fonts/CodapIvy.eot');
+	src:url('../fonts/CodapIvy.eot') format('embedded-opentype'),
+		url('../fonts/CodapIvy.ttf') format('truetype'),
+		url('../fonts/CodapIvy.woff') format('woff'),
+		url('../fonts/CodapIvy.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
